--- a/debian/control
+++ b/debian/control
@@ -44,7 +44,7 @@ Architecture: any
 Priority: extra
 Section: debug
 Depends: ${misc:Depends}, libkdegames6 (= ${binary:Version}), kde-runtime-dbg
-Suggests: kdegames (= ${source:Version})
+Suggests: kdegames
 Description: debugging symbols for the KDE games module
  This package contains the library debugging symbols of the shared library used
  by KDE games.
