--- a/debian/control
+++ b/debian/control
@@ -53,7 +53,8 @@ Package: libkdegames-dev
 Architecture: any
 Section: libdevel
 Depends: ${misc:Depends}, ${sameVersionDep:kdelibs5-dev:libkdegames6abi1},
- libkdegames6abi1 (= ${binary:Version}), libkdegamesprivate1abi1 (= ${binary:Version})
+         libkdegames6abi1 (= ${binary:Version}),
+         libkdegamesprivate1abi1 (= ${binary:Version})
 Description: development files for the KDE games library
  This package contains development files for building software that uses
  libraries from the KDE games module.
@@ -64,7 +65,8 @@ Package: libkdegames6abi1-dbg
 Architecture: any
 Priority: extra
 Section: debug
-Depends: ${misc:Depends}, libkdegames6abi1 (= ${binary:Version}), kde-runtime-dbg
+Depends: ${misc:Depends}, libkdegames6abi1 (= ${binary:Version}),
+         kde-runtime-dbg
 Suggests: kdegames
 Description: debugging symbols for the KDE games module
  This package contains the library debugging symbols of the shared library used
