--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: kde-sc-dev-latest (>= 4:4.11),
  libopenal-dev,
  libsndfile1-dev
 Standards-Version: 3.9.5
+XS-Testsuite: autopkgtest
 Homepage: http://games.kde.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/libkdegames.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/libkdegames.git
