--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Uploaders: Daniel Schepler <schepler@debian.org>,
 Build-Depends: cmake,
                debhelper (>= 9),
                kde-sc-dev-latest (>= 4:4.11),
-               kdelibs5-dev (>= 4:14.12.0),
+               kdelibs5-dev,
                libopenal-dev,
                libsndfile1-dev,
                pkg-kde-tools (>= 0.14)
