--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: libkdegames
+Source: libkdegames4
 Section: libs
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
